--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
    <h1>Movilidad CDMX</h1>
+   <article>
+    <h2>Transporte público</h2>
+    <hr>
+    <h3>Cablebus</h3>
+    <p>Es un sistema de transporte público tipo teleférico que opera en la Ciudad de México, específicamente en zonas de alta densidad poblacional y terreno montañoso.</p>
+   </article>
 </body>
 </html>
