--- a/index.html
+++ b/index.html
@@ -6,12 +6,32 @@
     <title>Movilidad CDMX</title>
 </head>
 <body>
-   <h1>Movilidad CDMX</h1>
-   <article>
-    <h2>Transporte público</h2>
-    <hr>
-    <h3>Cablebus</h3>
-    <p>Es un sistema de transporte público tipo teleférico que opera en la Ciudad de México, específicamente en zonas de alta densidad poblacional y terreno montañoso.</p>
-   </article>
+    <main>
+        <h1>Movilidad CDMX</h1>
+        <section>
+            <h2>Cablebus</h2>
+            <p>Es un sistema de transporte público tipo teleférico que opera en la Ciudad de México, específicamente en zonas de alta densidad poblacional y terreno montañoso.</p>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Costo</a>
+                    </li>
+                    <li>
+                        <a href="#">Tiempo</a>
+                    </li>
+                    <li>
+                        <a href="#">Rutas</a>
+                    </li>
+                    <li>
+                        <a href="#">Historia</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+            <article>
+                <hr>
+                <h3>Cablebus</h3>
+            </article>
+    </main>
 </body>
 </html>
