--- a/layout.html
+++ b/layout.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="./css/layout.css">    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movilidad CDMX</title>
@@ -14,28 +14,37 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./index.html">Inicio</a>
+                    <a href="./index.html" title="Ir a home">Inicio</a>
                 </li>
                 <li>
-                   <a href="costo.html">Costo</a>
+                   <a href="costo.html" title="Conocer Costos">Costo</a>
                 </li>
                 <li>
-                    <a href="historia.html">Historia</a>
+                    <a href="historia.html" title="Conocer Historia">Historia</a>
                 </li>
                 <li>
-                    <a href="rutas.html">Ruta</a>
+                    <a href="rutas.html" title="Conocer Rutas">Ruta</a>
                 </li>
                 <li>
-                    <a href="tiempo.html">Tiempo</a>
+                    <a href="tiempo.html" title="Conocer Tiempo">Tiempo</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <hr>
     <main>
         <section>
             <h1>Movilidad CDMX</h1>
             <p>PARRAFO</p>
         </section>
     </main>
+    <hr>
+    <footer>
+        <p>
+            <small>
+                Frida y Santiago
+            </small>
+        </p>
+    </footer>
 </body>
 </html>
