--- a/layout.html
+++ b/layout.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="container">
             <ul>
                 <li>
                     <a href="./index.html" title="Ir a home">Inicio</a>
@@ -33,14 +33,14 @@
         </nav>
     </header>
     <hr>
-    <main>
+    <main class="container">
         <section>
             <h1>Movilidad CDMX</h1>
             <p>PARRAFO</p>
         </section>
     </main>
     <hr>
-    <footer>
+    <footer class="container">
         <p>
             <small>
                 Frida y Santiago
