--- a/layout.html
+++ b/layout.html
@@ -15,19 +15,19 @@
         <nav class="container">
             <ul>
                 <li>
-                    <a href="./index.html" title="Ir a home">Inicio</a>
+                    <a  class="nav-link" href="./index.html" title="Ir a home">Inicio</a>
                 </li>
                 <li>
-                   <a href="costo.html" title="Conocer Costos">Costo</a>
+                   <a  class="nav-link" href="costo.html" title="Conocer Costos">Costo</a>
                 </li>
                 <li>
-                    <a href="historia.html" title="Conocer Historia">Historia</a>
+                    <a  class="nav-link" href="historia.html" title="Conocer Historia">Historia</a>
                 </li>
                 <li>
-                    <a href="rutas.html" title="Conocer Rutas">Ruta</a>
+                    <a  class="nav-link" href="rutas.html" title="Conocer Rutas">Ruta</a>
                 </li>
                 <li>
-                    <a href="tiempo.html" title="Conocer Tiempo">Tiempo</a>
+                    <a  class="nav-link" href="tiempo.html" title="Conocer Tiempo">Tiempo</a>
                 </li>
             </ul>
         </nav>
