--- a/layout.html
+++ b/layout.html
@@ -34,9 +34,23 @@
     </header>
     <hr>
     <main class="container">
-        <section>
-            <h1>Movilidad CDMX</h1>
-            <p>PARRAFO</p>
+        <section class="row">
+            <div class="twelve columns">
+                <h1>Movilidad CDMX</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat blanditiis, pariatur ipsa qui soluta corporis esse sunt similique, dolorem ducimus odit error. Vel atque nostrum odit saepe iure animi minima.</p>
+            </div>
+        </section>
+        <section class="row">
+            <article class="six columns">
+                <h2>Subtitulo</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, doloremque. Nulla fuga doloremque debitis voluptas temporibus vero tempore ducimus consequuntur, veritatis nobis dolorem, illum magnam? Quia atque sapiente fuga obcaecati!</p>
+             </article>
+
+             <article class="six columns">
+                <h2>Subtitulo</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, doloremque. Nulla fuga doloremque debitis voluptas temporibus vero tempore ducimus consequuntur, veritatis nobis dolorem, illum magnam? Quia atque sapiente fuga obcaecati!</p>
+             </article>
+
         </section>
     </main>
     <hr>
