--- a/layout.html
+++ b/layout.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Xanh+Mono:ital@0;1&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-    <link rel="stylesheet" href="./css/layout.css">    
+    <link rel="stylesheet" href="./css/layout.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movilidad CDMX</title>
 </head>
+
 <body>
     <header>
         <nav class="container">
             <ul>
                 <li>
-                    <a  class="nav-link" href="./index.html" title="Ir a home">Inicio</a>
+                    <a class="nav-link" href="./index.html" title="Ir a home">Inicio</a>
                 </li>
                 <li>
-                   <a  class="nav-link" href="costo.html" title="Conocer Costos">Costo</a>
+                    <a class="nav-link" href="costo.html" title="Conocer Costos">Costo</a>
                 </li>
                 <li>
-                    <a  class="nav-link" href="historia.html" title="Conocer Historia">Historia</a>
+                    <a class="nav-link" href="historia.html" title="Conocer Historia">Historia</a>
                 </li>
                 <li>
-                    <a  class="nav-link" href="rutas.html" title="Conocer Rutas">Ruta</a>
+                    <a class="nav-link" href="rutas.html" title="Conocer Rutas">Ruta</a>
                 </li>
                 <li>
-                    <a  class="nav-link" href="tiempo.html" title="Conocer Tiempo">Tiempo</a>
+                    <a class="nav-link" href="tiempo.html" title="Conocer Tiempo">Tiempo</a>
                 </li>
             </ul>
         </nav>
@@ -37,29 +41,45 @@
         <section class="row">
             <div class="twelve columns">
                 <h1>Movilidad CDMX</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat blanditiis, pariatur ipsa qui soluta corporis esse sunt similique, dolorem ducimus odit error. Vel atque nostrum odit saepe iure animi minima.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat blanditiis, pariatur ipsa qui soluta
+                    corporis esse sunt similique, dolorem ducimus odit error. Vel atque nostrum odit saepe iure animi
+                    minima.</p>
             </div>
         </section>
         <section class="row">
             <article class="six columns">
                 <h2>Subtitulo</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, doloremque. Nulla fuga doloremque debitis voluptas temporibus vero tempore ducimus consequuntur, veritatis nobis dolorem, illum magnam? Quia atque sapiente fuga obcaecati!</p>
-             </article>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, doloremque. Nulla fuga doloremque
+                    debitis voluptas temporibus vero tempore ducimus consequuntur, veritatis nobis dolorem, illum
+                    magnam? Quia atque sapiente fuga obcaecati!</p>
+            </article>
 
-             <article class="six columns">
+            <article class="six columns">
                 <h2>Subtitulo</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, doloremque. Nulla fuga doloremque debitis voluptas temporibus vero tempore ducimus consequuntur, veritatis nobis dolorem, illum magnam? Quia atque sapiente fuga obcaecati!</p>
-             </article>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, doloremque. Nulla fuga doloremque
+                    debitis voluptas temporibus vero tempore ducimus consequuntur, veritatis nobis dolorem, illum
+                    magnam? Quia atque sapiente fuga obcaecati!</p>
+            </article>
 
         </section>
     </main>
     <hr>
     <footer class="container">
-        <p>
-            <small>
-                Frida y Santiago
-            </small>
-        </p>
+        <div class="row">
+            <div class="four columns">
+                <h3>Derechos Reservados</h3>
+            </div>
+            <div class="four columns">
+                <h3>Contacto</h3>
+                <a href="https://dle.rae.es/motor" class="button">contacto</a>
+            </div>
+            <div class="four columns">
+                <h3>Redes Sociales</h3>
+                <a href="https://www.mgmotor.com.mx/" class="link">Defincion</a>
+                <a href="https://www.elmundo.es/motor.html" class="link">Motor</a>
+            </div>
+        </div>
     </footer>
 </body>
+
 </html>
